# Python-REST-APIs-With-Flask-Connexion-and-SQLAlchemy-

./: README.md
flask_tutorial_repo/: LICENSE  Makefile  README.md  pyproject.toml  setup.py
flask_tutorial_repo/docs/: Makefile  conf.py  index.rst  make.bat
flask_tutorial_repo/notebooks/: model.py  testing_marshmallow.ipynb
flask_tutorial_repo/src/: app.py  config.py  database.py  model.py  people.py  swagger.yml
flask_tutorial_repo/src/api/: app.py  people.py
flask_tutorial_repo/src/api/persistence/: database.py  model.py
flask_tutorial_repo/src/templates/: home.html
